--- a/config/boards/shields/fish/fish.conf
+++ b/config/boards/shields/fish/fish.conf
@@ -9,3 +9,11 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 # マウスポインターキーを使う
 # CONFIG_ZMK_POINTING=y
+
+# zmk stack sizes
+CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
+CONFIG_INPUT_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
+CONFIG_BT_CTLR_PHY_2M=n
