--- a/config/boards/shields/fish/fish.conf
+++ b/config/boards/shields/fish/fish.conf
@@ -12,3 +12,16 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 # zmk stack sizes
 CONFIG_BT_CTLR_PHY_2M=n
+# HID over GATT (必須、これがないとキーボードとして正しく認識されない)
+CONFIG_BT_HOGP=y
+
+# 複数端末とペアリングできるようにする（例: Mac + Windows）
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
+CONFIG_BT_BONDABLE=y
+
+# Windows向けBLE接続チューニング（接続遅延/キー飛び防止）
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6   # 7.5ms
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12  # 15ms
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=30
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
