--- a/config/boards/shields/fish/fish.conf
+++ b/config/boards/shields/fish/fish.conf
@@ -14,6 +14,8 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_PHY_2M=n
 # HID over GATT (必須、これがないとキーボードとして正しく認識されない)
 CONFIG_BT_HOGP=y
+CONFIG_BT_DIS=y
+CONFIG_BT_GATT_DIS=y
 
 # 複数端末とペアリングできるようにする（例: Mac + Windows）
 CONFIG_BT_MAX_CONN=2
@@ -21,7 +23,7 @@ CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
 CONFIG_BT_BONDABLE=y
 
 # Windows向けBLE接続チューニング（接続遅延/キー飛び防止）
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6   # 7.5ms
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12  # 15ms
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12   # 7.5ms
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=24  # 15ms
 CONFIG_BT_PERIPHERAL_PREF_LATENCY=30
 CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
