--- a/config/boards/shields/fish/fish.conf
+++ b/config/boards/shields/fish/fish.conf
@@ -17,13 +17,14 @@ CONFIG_BT_HOGP=y
 CONFIG_BT_DIS=y
 CONFIG_BT_GATT_DIS=y
 
-# 複数端末とペアリングできるようにする（例: Mac + Windows）
-CONFIG_BT_MAX_CONN=2
-CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
-CONFIG_BT_BONDABLE=y
-
 # Windows向けBLE接続チューニング（接続遅延/キー飛び防止）
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12   # 7.5ms
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=24  # 15ms
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=18   # 22.5ms
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=36   # 45ms
 CONFIG_BT_PERIPHERAL_PREF_LATENCY=30
 CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
+
+# -----------------------------
+# デバウンス（チャタリング防止）
+# -----------------------------
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
